fixed username dropdown to wrap name and fit the button

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -74,7 +74,10 @@ button:focus {
 
 .username h5 {
   float: left;
-  padding: 18px 5px;
+  padding: 10px 5px;
+  width: 85px;
+  white-space: normal;
+  text-align: center;
 }
 
 .menu-list {
